2008-05-02  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Olivier Crete <tester at tester dot ca>

	* gst/rtp/gstrtpspeexpay.c: (gst_rtp_speex_pay_class_init),
	(gst_rtp_speex_pay_getcaps):
	Add negotiation for the speec channels and rate. See #465146.

2008-05-02  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Olivier Crete <tester at tester dot ca>

	* gst/rtp/gstrtpilbcpay.c: (gst_rtpilbcpay_class_init),
	(gst_rtpilbcpay_sink_setcaps), (gst_rtpilbcpay_sink_getcaps):
	Add negotiation for the ILBC mode. See #465146.

2008-05-02  Stefan Kost  <ensonic@users.sf.net>

	* ext/soup/gstsouphttpsrc.c:
	  Include stdlib to fix the build. Use g_free instead of free, libsoup
	  uses glib.

2008-05-02  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: j^ <j@bootlab.org>

	* gst/qtdemux/qtdemux.c: (qtdemux_video_caps):
	Add more mpeg2 variants. Fixes #530886.

2008-05-01  Tim-Philipp Müller  <tim.muller at collabora co uk>

	Patch by: Youness Alaoui <youness.alaoui at collabora co uk>

	* gst/udp/gstudpsrc.c: (gst_udpsrc_create):
	  Don't error out if we get an ICMP destination-unreachable
	  message when trying to read packets on win32 (#529454).

2008-04-30  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* configure.ac:
	* gst/qtdemux/qtdemux.c: (qtdemux_parse_trak):
	  Use new error code for encrypted streams (which requires core CVS).

2008-04-30  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_videosrc_template),
	  (gst_qtdemux_audiosrc_template):
	  Fix swapped pad template names, spotted by Thiago Sousa Santos.

2008-04-30  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/speex/gstspeexdec.c: (speex_dec_sink_event),
	(speex_dec_chain_parse_data):
	Produce concealment data when time progresses in a segment update.

2008-04-29  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/speex/gstspeexdec.c: (speex_dec_chain_parse_data),
	(speex_dec_chain):
	Try to preserve input timestamps when we can.