@@ -2,9 +2,17 @@
 
 	Patch by: Olivier Crete <tester at tester dot ca>
 
+	* ext/speex/gstspeexenc.c: (gst_speex_enc_sink_getcaps),
+	(gst_speex_enc_init), (gst_speex_enc_chain):
+	Add negotiation for the speex channels and rate. Fixes #465146.
+
+2008-05-02  Wim Taymans  <wim.taymans@collabora.co.uk>
+
+	Patch by: Olivier Crete <tester at tester dot ca>
+
 	* gst/rtp/gstrtpspeexpay.c: (gst_rtp_speex_pay_class_init),
 	(gst_rtp_speex_pay_getcaps):
-	Add negotiation for the speec channels and rate. See #465146.
+	Add negotiation for the speex channels and rate. See #465146.
 
 2008-05-02  Wim Taymans  <wim.taymans@collabora.co.uk>
 
